POE::Component::WWW::Shorten
============================

1.18	Fri May  1 07:11:28 BST 2009
	- Tidied docs.
	- Set repository META 

1.16	Sat Jun 28 08:42:18 BST 2008
	- Added LICENSE information.

1.14	Mon Feb 25 16:34:53 GMT 2008
	- Doc fixes. Mainly a release to get rid of all the fails on CPAN
	  Testers due to dodgy smoker setups at the time of the last release.

1.12	Mon Jan 14 12:24:08 GMT 2008
	- Fixed a problem with refcounts, reported by Zoffix Znet

1.10	Sun Jan 13 09:56:22 GMT 2008
	- Fixed typo spotted by Zoffix Znet.
	- Tidied up test naming

1.09	Sat Nov 17 14:52:36 GMT 2007
	- Added 'session' option to 'shorten' as per request from Zoffix.

1.08	Thu Nov  1 10:56:17 GMT 2007
	- Updated Module::Install to 0.68

1.07	Sat Jul 28 13:04:34 BST 2007
	- Fixed abstract_from and build_requires in Makefile.PL

1.06	Mon Feb 19 16:29:29 GMT 2007
	- Added kwalitee test.

1.05	Wed Jan 24 10:24:56 GMT 2006
	- Makefile.PL totally M::I now.
	- Minor code refactoring.

1.04	Sun Oct 01 13:16:04 BST 2006
	- Changed to POE 0.38 sig_child() semantics.

1.03	Tue Sep 26 13:53:04 BST 2006
	- Switched Module::Install

1.02	Fri Sep 08 17:28:39 BST 2006
	- Added Changes file
	- Added POD tests
	- Added examples/synopsis.pl